# Premier-Dag-Airflow

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  dbt-validate.yml
config/: connections.json  variables.json
dags/: tp2b_pipeline_postgresql.py
dags/common/: config.py
dags/ingestion/: tp2_premier_dag.py  tp2a_ingestion_meteo.py  tp3_data_lake.py  weather_pipeline_dag.py
data/: meteo_paris_20260608_142728.csv  meteo_villes_20260609_095418.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: city_monthly_stats.sql  daily_weather.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_weather.sql
dbt/tests/: assert_temp_max_greater_than_min.sql
docker/: Dockerfile  docker-compose.yml  init-db.sh
docker/grafana/provisioning/dashboards/: provider.yml  weather_dashboard.json
docker/grafana/provisioning/datasources/: postgres.yml
docs/: architecture.md
docs/adr/: 001_why_minio.md
scripts/: create_buckets.py  setup.sh
sql/: init_meteo_db.sql
sql/migrations/: 002_add_indexes.sql
tests/: conftest.py
tests/dags/: test_dag_integrity.py
tests/integration/: test_pipeline.py
tests/unit/: test_transformations.py
